--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@
 <!-- footer section starts  -->
 
 <section class="footer">
+    <div class="follow">
+        <a href="#" class="fab fa-facebook-f"></a>
+        <a href="#" class="fab fa-instagram"></a>
+    </div>
     <div class="credit">created by <span>IndiaNature</span> | all rights reserved</div>
 
 </section>
