--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
     <div class="follow">
         <a href="#" class="fab fa-facebook-f"></a>
         <a href="#" class="fab fa-instagram"></a>
+        <a href="https://www.facebook.com/shraddha.vast.3/" class="fab fa-facebook-f"></a>
+        <a href="https://www.instagram.com/pritam_18__/" class="fab fa-instagram"></a>
     </div>
     <div class="credit">created by <span>IndiaNature</span> | all rights reserved</div>
 
